# multi-robot-mapping

./: README.md
ROS-Academy-for-Beginners/: gazebo_spawn_model.md  note.md
ROS-Academy-for-Beginners/orbslam2_demo/launch/: ros_orbslam2.launch
ROS-Academy-for-Beginners/robot_sim_demo/scripts/: robot_keyboard_teleop.py
cam_demo/: CMakeLists.txt  package.xml
cam_demo/src/: image_converter.cpp
cartographer/: README.rst
cartographer/cartographer/sensor/: laser.cc
cartographer/configuration_files/: trajectory_builder_2d.lua
cartographer_ros/: README.rst
cartographer_ros/cartographer_ros/configuration_files/: backpack_2d.lua
cartographer_ros/cartographer_ros/launch/: backpack_2d.launch
cartographer_ros/cartographer_ros/src/: cartographer_node_main.cc
cartographer_ros/cartographer_ros/urdf/: backpack_2d .urdf.xacro  backpack_2d.urdf
documentation/: C_primer_plus.md  Mapping.md  ROS.md  ROS_setup.md  camera.md  cmake.md  create_package.md  git.md  irobot_control.md  linux _command.md  linux_manuel.md  matlab.md  network.md  orb2_slam.md  raspberry_pi_3b+_setup.md  sensor_information.md  sublime_shortcut.md  vim.md
iai_kinect2/: kinect2 usage
iai_kinect2/kinect2_bridge/: CMakeLists.txt
rplidar_ros/launch/: rplidar.launch  rplidar_experiment.launch
rrt_exploration_tutorials/launch/: irobotcreate.launch  irobotcreate_experiment.launch  single_experiment_irobotcreate.launch  single_simulated_house.launch  single_simulated_irobotcreate.launch
rrt_exploration_tutorials/param/: base_local_planner_params.yaml
(+20 files in other folders)
